--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                 <div class="portfolio-item development hover-scale" data-category="development">
                     <div class="card-glass rounded-xl overflow-hidden h-full flex flex-col">
                         <div class="h-64 overflow-hidden">
-                            <img src="OIP.jpeg" 
+                            <img src="https://www.bing.com/th/id/OIP.CTYh9IBWnSI-rkN2tTNjWgHaEK?w=171&h=101&c=8&rs=1&qlt=90&o=6&pid=3.1&rm=2" 
                                  alt="Branding Project" class="w-full h-full object-cover transition duration-500 hover:scale-110">
                         </div>
                         <div class="p-6 flex-grow">
