--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <div class="flex justify-between items-center h-20">
                 <!-- Logo -->
                 <div class="flex-shrink-0 flex items-center">
-                    <img src="louis.png" alt="Logo" class="h-10 w-10 rounded-full mr-3">
+                    <img src="https://files.cdn-files-a.com/uploads/9554711/2000_68175d1912669.png" alt="Logo" class="h-10 w-10 rounded-full mr-3">
                     <span class="text-xl font-bold">Peter <span class="gradient-text">Louis</span></span>
                 </div>
                 
@@ -200,7 +200,7 @@
             <div class="flex flex-col md:flex-row items-center gap-12">
                 <div class="md:w-1/2 flex justify-center">
                     <div class="relative w-70 h-58 md:w-80 md:h-80 rounded-2x1 overflow-hidden shadow-xl hover-scale">
-                        <img src="face.jpg" 
+                        <img src="https://files.cdn-files-a.com/uploads/9554711/2000_68175d1912669.png" 
                              alt="Profile" class="w-full h-full object-cover">
                     </div>
                 </div>
