--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                     <!-- Slide 3 -->
                     <div class="min-w-full h-full relative">
                         <div class="absolute inset-0 bg-gradient-to-r from-black/70 to-black/30"></div>
-                        <img src="pic.jpg" 
+                        <img src="https://files.cdn-files-a.com/uploads/9554711/100_67b92ef55ccb9.jpg" 
                              alt="Brand Identity" class="w-full h-full object-cover">
                         <div class="absolute inset-0 flex items-center px-8 md:px-16">
                             <div class="max-w-2xl">
@@ -200,7 +200,7 @@
             <div class="flex flex-col md:flex-row items-center gap-12">
                 <div class="md:w-1/2 flex justify-center">
                     <div class="relative w-70 h-58 md:w-80 md:h-80 rounded-2x1 overflow-hidden shadow-xl hover-scale">
-                        <img src="https://files.cdn-files-a.com/uploads/9554711/2000_68175d1912669.png" 
+                        <img src="https://files.cdn-files-a.com/uploads/9554711/2000_68175d1d994da.jpg" 
                              alt="Profile" class="w-full h-full object-cover">
                     </div>
                 </div>
