--- a/login.html
+++ b/login.html
@@ -330,7 +330,7 @@
                 // window.location.href = '/dashboard';
                 
                 // For demo purposes, Redirect to the webpage
-                window.location.href = 'https://petercybe.github.io/louispeter/'; // Redirect to the webpage
+                window.location.href = 'index.html'; // Redirect to the webpage
             } else {
                 showError(errorMessage, 'Invalid username or password');
             }
