--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                 // window.location.href = '/dashboard';
                 
                 // For demo purposes, Redirect to the webpage
-                window.location.href = 'website.html'; // Redirect to the webpage
+                window.location.href = 'login.html'; // Redirect to the webpage
             } else {
                 showError(errorMessage, 'Invalid username or password');
             }
