--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         <div id="loginFormContainer">
             <h2>Login</h2>
             <div class="profile-image">
-                <img src="louiss.jpg" alt="Profile Picture">
+                <img src="https://files.cdn-files-a.com/uploads/9554711/100_6818076ba43b4.jpg" alt="Profile Picture">
             </div>
             <form id="loginForm">
                 <div class="form-group">
