--- a/login.html
+++ b/login.html
@@ -554,7 +554,7 @@
         <div class="max-w-7xl mx-auto">
             <div class="flex flex-col md:flex-row justify-between items-center">
                 <div class="flex items-center mb-6 md:mb-0">
-                    <img src="louis.png" alt="Logo" class="h-10 w-10 rounded-full mr-3">
+                    <img src=""https://files.cdn-files-a.com/uploads/9554711/2000_68175d1912669.png" alt="Logo" class="h-10 w-10 rounded-full mr-3">
                     <span class="text-xl font-bold">Peter <span class="gradient-text">Louis</span></span>
                 </div>
                 
