--- a/index.html
+++ b/index.html
@@ -239,59 +239,57 @@
 const loginForm = document.getElementById("loginForm");
 
 // Sign Up
-signupForm.addEventListener("submit", async (e) => {
-  e.preventDefault();
+  const signupForm = document.getElementById('signup-form');
 
-  const username = document.getElementById("signupUsername").value;
-  const password = document.getElementById("signupPassword").value;
+  signupForm.addEventListener('submit', async (e) => {
+    e.preventDefault();
 
-  try {
-    const res = await fetch("http://localhost:5000/api/auth/signup", {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ username, password })
+    const username = document.getElementById('signup-username').value;
+    const email = document.getElementById('signup-email').value;
+    const password = document.getElementById('signup-password').value;
+
+    const response = await fetch('http://localhost:5000/api/auth/signup', {
+      method: 'POST',
+      headers: {
+        'Content-Type': 'application/json'
+      },
+      body: JSON.stringify({ username, email, password })
     });
 
-    const data = await res.json();
-
-    if (res.ok) {
-      alert("Signup successful! You can now log in.");
-      signupForm.reset();
+    const data = await response.json();
+    if (response.ok) {
+      alert('Signup successful!');
+      window.location.href = 'login.html';
     } else {
-      alert(data.message || "Signup failed.");
+      alert(data.message || 'Signup failed.');
     }
-  } catch (err) {
-    alert("Server error during signup.");
-  }
-});
+  });
 
 // Login
-loginForm.addEventListener("submit", async (e) => {
-  e.preventDefault();
+  const loginForm = document.getElementById('login-form');
 
-  const username = document.getElementById("loginUsername").value;
-  const password = document.getElementById("loginPassword").value;
+  loginForm.addEventListener('submit', async (e) => {
+    e.preventDefault();
 
-  try {
-    const res = await fetch("http://localhost:5000/api/auth/login", {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ username, password })
+    const email = document.getElementById('login-email').value;
+    const password = document.getElementById('login-password').value;
+
+    const response = await fetch('http://localhost:5000/api/auth/login', {
+      method: 'POST',
+      headers: {
+        'Content-Type': 'application/json'
+      },
+      body: JSON.stringify({ email, password })
     });
 
-    const data = await res.json();
-
-    if (res.ok) {
-      alert("Login successful!");
-      // Redirect or show logged-in content here
-      loginForm.reset();
+    const data = await response.json();
+    if (response.ok) {
+      alert(Welcome, ${data.username}!);
+      // You can redirect to a dashboard page if needed
     } else {
-      alert(data.message || "Login failed.");
+      alert(data.message || 'Login failed.');
     }
-  } catch (err) {
-    alert("Server error during login.");
-  }
-});
+  });
     </script>
 </body>
 </html>
