--- a/public/index.html
+++ b/public/index.html
@@ -460,33 +460,12 @@
                 <h2 class="text-3xl font-bold mb-4">Get In <span class="gradient-text">Touch</span></h2>
                 <p class="text-gray-300 max-w-2xl mx-auto">Have a project in mind or want to discuss potential opportunities? I'd love to hear from you!</p>
             </div>
+            <form action="https://api.web3forms.com/submit" method="POST">
+    <input type="hidden" name="access_key" value="aeda7ebc-a30f-4ff6-837a-44a4ec34a7cc">
             
             <div class="flex flex-col md:flex-row gap-12">
                 <div class="md:w-1/2">
                     <form class="space-y-6">
-                        <script>
-document.querySelector("form").addEventListener("submit", async function(e) {
-    e.preventDefault();
-
-    const name = document.getElementById("name").value.trim();
-    const email = document.getElementById("email").value.trim();
-    const subject = document.getElementById("subject").value.trim();
-    const message = document.getElementById("message").value.trim();
-
-    try {
-        const res = await fetch('/api/contact', {
-            method: 'POST',
-            headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify({ name, email, subject, message })
-        });
-
-        const data = await res.json();
-        alert(data.message || 'Message sent!');
-    } catch (err) {
-        alert('There was an error sending the message.');
-    }
-});
-</script>
                         <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                             <div>
                                 <label for="name" class="block text-sm font-medium text-gray-300 mb-1">Name</label>
@@ -779,3 +758,4 @@ document.querySelector("form").addEventListener("submit", async function(e) {
     </script>
 </body>
 </html>
+
